crud completo categoria, empleado

--- a/core/templates/categoria/categoria_list.html
+++ b/core/templates/categoria/categoria_list.html
@@ -29,6 +29,6 @@
 
             </tr>
             {% empty %}
-                <tr> <td> No hay clientes registrados </td> </tr>
+                <tr> <td> No hay categorias registradas </td> </tr>
     {% endfor %}
 {% endblock %}
