--- a/core/templates/inmuebles/inmueble_list.html
+++ b/core/templates/inmuebles/inmueble_list.html
@@ -9,7 +9,12 @@
 {% block tlista %} Listado de Inmuebles {% endblock %}
 
 {% block tExtras %} 
-    <a href="#" class="bi bi-plus-circle-fill text-success fs-5"></a>
+    
+    {% if cliente %}
+        <a href="{% url 'crearInmuebleParaCliente' cliente.pk %}" class="bi bi-plus-circle-fill text-success fs-5"></a>
+    {% else %}
+        <a href="{% url 'crearInmueble' %}" class="bi bi-plus-circle-fill text-success fs-5"></a>
+    {% endif %}
 {% endblock %}
 
 {% block thextras %}
