--- a/servicios/templates/tiposServicios/tipoServicioForm.html
+++ b/servicios/templates/tiposServicios/tipoServicioForm.html
@@ -14,7 +14,7 @@
 
 {% block cform %}
   {% crispy form form.helper %}
-  <div data-formset="tipoServicio_productos" id="productos" >
+  <div data-formset="productos_cantidad" id="productos" >
     {% crispy tipoServicio_producto_formset tipoServicio_producto_formset_helper %}
   </div>
 {% endblock %}
