--- a/servicios/templates/tiposServicios/tipoServicio_list.html
+++ b/servicios/templates/tiposServicios/tipoServicio_list.html
@@ -26,7 +26,7 @@
 
 
         <td>
-            <a href="#" onclick="abrir_modal('{% url "servicios:modificarTipoServicio" pk=t.codigo %}')" class="bi bi-pencil-square text-primary"> </a>
+            <a href="#" onclick="abrir_modal('{% url "servicios:modificarTipoServicio" pk=t.pk %}')" class="bi bi-pencil-square text-primary"> </a>
 
 
         </td>
