--- a/servicios/templates/tiposServicios/tipoServicio_modal.html
+++ b/servicios/templates/tiposServicios/tipoServicio_modal.html
@@ -15,7 +15,7 @@
 
 <!-- Url del modal -->
 {% block url %}
-  {% url 'servicios:modificarTipoServicio' object.codigo %}
+  {% url 'servicios:modificarTipoServicio' object.pk %}
 {% endblock %}
 
 {% block cmodal %}
