--- a/core/templates/basemodal.html
+++ b/core/templates/basemodal.html
@@ -3,22 +3,18 @@
 
 <div class="modal-dialog"  role="document">
     <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="mx-3">{% block tmodal %} {% endblock %} {% block tobjectmodal %} {% endblock %}</h4>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <form action="{% block url %}  {% endblock %}" method="POST">
-        {% csrf_token %}
+        <div class="modal-header">
+            <h4 class="mx-3">{% block tmodal %} {% endblock %} {% block tobjectmodal %} {% endblock %}</h4>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <!--form action="{% block url %}  {% endblock %}" method="POST"-->
+        {% comment %}{% csrf_token %} {% endcomment %}
 
         <div class="modal-body " >
-          {%block cmodal%} 
-      
-            {{ form | crispy }}
+            {% block cform %}
+                {% crispy form form.helper %}
             {% endblock %}
+            <button type="button" class="btn btn-secondary mx-auto" data-bs-dismiss="modal">Cancelar</button>
         </div>
-          <div class="modal-footer">
-        <button type="submit" class="btn btn-primary">{% block btnmodal %} {% endblock %}</button>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-          </div>
     </div>
 </div>
