resolviendo conflictos de merge

--- a/core/templates/core/producto_form.html
+++ b/core/templates/core/producto_form.html
@@ -1,5 +1,9 @@
 {% extends "../baseform.html" %}
 
+{% block title %}
+    Productos
+{% endblock %}
+
 <!--Titulo del formulario-->
 {% block tform %} Crear Producto {% endblock %}
 
