--- a/core/templates/inmuebles/inmueble_form.html
+++ b/core/templates/inmuebles/inmueble_form.html
@@ -7,26 +7,25 @@
 {% block url %} {% url 'crearInmueble' %} {% endblock %}
 
 <!--Boton del formulario-->
-{% block btnform %} Guardar {% endblock %}
-
+{% comment %}{% block btnform %} Guardar {% endblock %}{% endcomment %}
 {% block extrajs %}
 
 <script type="text/javascript">
-  $(function() {
+$(function() {
   	
     $("#save-inmueble").on("click", (e) => { 
 	    const select = $("#id_cliente[disabled]");
-	    if (select !== null){
-	        e.preventDefault();
+	    if (select.length > 0){
+	        //e.preventDefault();
 	        select.prop("disabled", false);
 	        //console.log($("#id-inmuebleForm"));
 	        //$("#id-inmuebleForm").trigger("submit");
 	        $("#id-inmuebleForm").trigger("submit");
 	    }
 
-     })
+    })
 
-  })
+})
 
 </script>
 
