--- a/core/templates/inmuebles/inmueble_modal.html
+++ b/core/templates/inmuebles/inmueble_modal.html
@@ -10,4 +10,4 @@
 {% block url %} {% url 'modificarInmueble' object.pk %} {% endblock %}
 
 <!--Boton del modal-->
-{% block btnmodal %} Guardar {% endblock %} 
+{% comment %}{% block btnmodal %} Guardar {% endblock %} {% endcomment %}
