--- a/core/templates/inmuebles/inmueble_form.html
+++ b/core/templates/inmuebles/inmueble_form.html
@@ -3,6 +3,9 @@
 <!--Titulo del formulario-->
 {% block tform %} Crear Inmueble {% endblock %}
 
+<!--Objeto del titulo del form-->
+{% block tobjectform %} {% endblock %}
+
 <!--Url del formulario-->
 {% block url %} {% url 'crearInmueble' %} {% endblock %}
 
