--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -131,6 +131,21 @@
             <!--Clientes-->
             <ul id="gestionservicios" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
 
+
+              <a href="#" class="sidebar-link collapsed mx-2" data-bs-target="#Servicio" data-bs-toggle="collapse"
+                aria-expanded="false">
+                <i class="bi bi-file-medical-fill"></i>
+                Servicio
+              </a>
+
+              <ul id="Servicio" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
+                <li class="sidebar-item">
+                  <a href="{% url 'servicios:crearServicio' %}" class="sidebar-link mx-4"> <i class="bi bi-plus"></i> Crear</a>
+                </li>
+                
+              </ul>
+
+
               <a href="#" class="sidebar-link collapsed mx-2" data-bs-target="#tipoServicio" data-bs-toggle="collapse"
                 aria-expanded="false">
                 <i class="bi bi-file-medical-fill"></i>
