--- a/servicios/templates/tiposServicios/tipoServicio_list.html
+++ b/servicios/templates/tiposServicios/tipoServicio_list.html
@@ -10,17 +10,14 @@
 
     {% block thextras %}
         <th colspan="">Opciones</th>
-        <th colspan="">Informacion</th>
     {% endblock%}
     
     {% block tcuerpo %}
     {% for t in tiposServicio %}
     <tr>
         <td>{{forloop.counter}}</td>
-        <td>{{t.codigo}}</td>
         <td>{{t.descripcion}}</td>
-        <td>{{t.costo}}</td>
-        <td>{{t.unidadDeMedida}}</td>
+        <td>{{t.ganancia}}</td>
 
 
 
@@ -28,12 +25,8 @@
         <td>
             <a href="#" onclick="abrir_modal('{% url "servicios:modificarTipoServicio" pk=t.pk %}')" class="bi bi-pencil-square text-primary"> </a>
 
+        </td>
 
-        </td>
-        <td>
-            <a href="/Productos/{{t.codigo}}" class="btn btn-link"><i class="bi bi-journal"></i></a>
-           
-        </td>
     </tr>
     {% empty %}
     <tr> <td> No hay tipos de servicio registrados </td> </tr>
