resolucion de conflictos de merge entre turnos(tipo servicio) y empleados

--- a/core/templates/empleado/empleado_modal.html
+++ b/core/templates/empleado/empleado_modal.html
@@ -7,7 +7,7 @@
 {% block tobjectmodal %} {{object}} {% endblock %}
 
 <!--Url del modal-->
-{% block url %} {% url 'modificarEmpleado' object.legajo %} {% endblock %}
+{% block url %} {% url 'modificarEmpleado' object.legajo%} {% endblock %}
 
 <!--Boton del modal-->
-{% block btnmodal %} Guardar {% endblock %} 
+{% comment %}{% block btnmodal %} Guardar {% endblock %}{% endcomment %} 
