--- a/servicios/templates/tiposServicios/tipoServicio_list.html
+++ b/servicios/templates/tiposServicios/tipoServicio_list.html
@@ -19,8 +19,7 @@
         <td>{{forloop.counter}}</td>
         <td>{{t.codigo}}</td>
         <td>{{t.descripcion}}</td>
-        <td>{{t.costo}}</td>
-        <td>{{t.unidadDeMedida}}</td>
+        <td>{{t.importe}}</td>
 
 
 
