--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -171,7 +171,27 @@
               </li>
             </ul>
           </li>
-      
+
+       <!-- Menu turnos -->
+       <li class="sidebar-item">
+
+        <a href="#" class="sidebar-link collapsed" data-bs-target="#gestionHorarios" data-bs-toggle="collapse"
+          aria-expanded="false">
+          <i class="bi bi-box-seam"></i> Gestion Turnos
+        </a>
+
+        <!--Turnos-->
+        <ul id="gestionHorarios" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
+          <li class="sidebar-item">
+            <a href="{% url 'turnos:crearHorario' %}" class="sidebar-link mx-4"> <i class="bi bi-plus"></i> Crear</a>
+          </li>
+          
+          <li class="sidebar-item">
+            <a href="{% url 'turnos:listarHorarios' %}" class="sidebar-link mx-4"> <i class="bi bi-list-ul"></i> Buscar</a>
+          </li>
+        </ul>
+      </li>
+            
           <!-- Menu clientes -->
           <li class="sidebar-item">
 
