filtrando por estado de Servicio

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -147,7 +147,7 @@
 
               <ul id="Servicio" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
                 <li class="sidebar-item">
-                  <a href="{% url 'servicios:listarServicio' %}" class="sidebar-link mx-4"> <i class="bi bi-plus"></i> Crear</a>
+                  <a href="{% url 'servicios:listarServicio' %}" class="sidebar-link mx-4"> <i class="bi bi-list-ul"></i> Listar</a>
                 </li>
                 
               </ul>
