--- a/servicios/templates/servicios/servicio_list.html
+++ b/servicios/templates/servicios/servicio_list.html
@@ -19,7 +19,7 @@
         <td>{{forloop.counter}}</td>
         
         <td>{{s.codigo}}</td>
-        <td>{{s.estado}}</td>
+        <td>{{s.estado_actual}}</td>
         <td>{{s.desde}}</td>
         <td>{{s.hasta}}</td>
         <td>{{s.cantidadEstimadaEmpleados}}</td>
