resolviendo conflictos entre empleados e inmuebles

--- a/turnos/templates/horario/horario_form.html
+++ b/turnos/templates/horario/horario_form.html
@@ -1,4 +1,4 @@
-{% extends "..core/baseform.html" %}
+{% extends ".baseform.html" %}
 
 <!--Titulo del formulario-->
 {% block tform %} Crear Turnos {% endblock %}
