--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -172,8 +172,8 @@
             </ul>
           </li>
 
-       <!-- Menu turnos -->
-       <li class="sidebar-item">
+      <!-- Menu turnos -->
+      <li class="sidebar-item">
 
         <a href="#" class="sidebar-link collapsed" data-bs-target="#gestionHorarios" data-bs-toggle="collapse"
           aria-expanded="false">
@@ -192,7 +192,7 @@
         </ul>
       </li>
             
-          <!-- Menu clientes -->
+          <!-- Menu servicios -->
           <li class="sidebar-item">
 
             <a href="#" class="sidebar-link collapsed" data-bs-target="#gestionservicios" data-bs-toggle="collapse"
@@ -200,7 +200,7 @@
               <i class="bi bi-file-earmark-text-fill"></i>Gestion de Servicios
             </a>
 
-            <!--Clientes-->
+            <!--Servicios-->
             <ul id="gestionservicios" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
 
               <a href="#" class="sidebar-link collapsed mx-2" data-bs-target="#tipoServicio" data-bs-toggle="collapse"
