resolviendo confilictos entre inmuebles y turnos

--- a/turnos/templates/horario/horario_form.html
+++ b/turnos/templates/horario/horario_form.html
@@ -1,10 +1,10 @@
-{% extends "..core/baseform.html" %}
+{% extends "baseform.html" %}
 
 <!--Titulo del formulario-->
 {% block tform %} Crear Turnos {% endblock %}
 
 <!--Url del formulario-->
-{% block url %} {% url 'crearHorario %} {% endblock %}
+{% block url %} {% url 'crearHorario' %} {% endblock %}
 
 <!--Boton del formulario-->
 {% block btnform %} Guardar {% endblock %}
