--- a/turnos/templates/horario/horario_modal.html
+++ b/turnos/templates/horario/horario_modal.html
@@ -1,4 +1,4 @@
-{% extends "core/basemodal.html" %}
+{% extends "basemodal.html" %}
 
 <!--Titulo del modal-->
 {% block tmodal %} Edicion Turnos: {% endblock %}
