cambio de iconos y titulos

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -57,7 +57,7 @@
 
             <a href="#" class="sidebar-link collapsed" data-bs-target="#gestionempleado" data-bs-toggle="collapse"
               aria-expanded="false">
-              <i class="bi bi-person-lines-fill"></i> Gestion Empleados
+              <i class="bi bi-person-bounding-box"></i> Gestion Empleados
             </a>
 
             <!--Empleados-->
@@ -65,7 +65,7 @@
 
               <a href="#" class="sidebar-link collapsed mx-2" data-bs-target="#empleado" data-bs-toggle="collapse"
                 aria-expanded="false">
-                <i class="bi bi-person-fill"></i>
+                <i class="bi bi-person-square"></i>
                 Empleados
               </a>
 
@@ -85,7 +85,7 @@
 
               <a href="#" class="sidebar-link collapsed mx-2" data-bs-target="#categoria" data-bs-toggle="collapse"
                 aria-expanded="false">
-                <i class="bi bi-person-fill"></i>
+                <i class="bi bi-clipboard2-fill"></i>
                 Categorias
               </a>
 
@@ -135,7 +135,7 @@
 
               <a href="#" class="sidebar-link collapsed mx-2" data-bs-target="#inmueble" data-bs-toggle="collapse"
                 aria-expanded="false">
-                <i class="bi bi-person-fill"></i>
+                <i class="bi bi-building-fill"></i>
                 Inmueble
               </a>
 
@@ -177,7 +177,7 @@
 
             <a href="#" class="sidebar-link collapsed" data-bs-target="#gestionservicios" data-bs-toggle="collapse"
               aria-expanded="false">
-              <i class="bi bi-file-earmark-text-fill"></i>Gestion de Servicios
+              <i class="bi bi-file-medical-fill"></i> Gestion de Servicios
             </a>
 
             <!--Clientes-->
@@ -186,7 +186,7 @@
 
               <a href="#" class="sidebar-link collapsed mx-2" data-bs-target="#Servicio" data-bs-toggle="collapse"
                 aria-expanded="false">
-                <i class="bi bi-file-medical-fill"></i>
+                <i class="bi bi-file-text-fill"></i>
                 Servicio
               </a>
 
@@ -206,7 +206,7 @@
 
               <a href="#" class="sidebar-link collapsed mx-2" data-bs-target="#tipoServicio" data-bs-toggle="collapse"
                 aria-expanded="false">
-                <i class="bi bi-file-medical-fill"></i>
+                <i class="bi bi-file-earmark-text-fill"></i>
                 Tipo Servicio
               </a>
 
@@ -222,57 +222,7 @@
             </ul>
           </li>
 
-
-
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link collapsed" data-bs-target="#post" data-bs-toggle="collapse"
-              aria-expanded="false">
-              <i class="bi bi-file-earmark"></i>Post</a>
-            <ul id="post" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
-              <li class="sidebar-item">
-                <a href="#" class="sidebar-link">Post 1</a>
-              </li>
-              <li class="sidebar-item">
-                <a href="#" class="sidebar-link">Post 2</a>
-              </li>
-              <li class="sidebar-item">
-                <a href="#" class="sidebar-link">Post 3</a>
-              </li>
-            </ul>
-          </li>
-
-          <!---->
-          <li class="sidebar-header">
-            Multi nivel
-          </li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link collapsed" data-bs-target="#menu" data-bs-toggle="collapse"
-              aria-expanded="false">
-              <i class="bi bi-person-fill-gear"></i>Multi Dropdown
-            </a>
-            <ul id="menu" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
-
-              <a href="#" class="sidebar-link collapsed" data-bs-target="#nivel-1" data-bs-toggle="collapse"
-                aria-expanded="false">
-                Nivel 1
-              </a>
-
-              <ul id="nivel-1" class="sidebar-dropdown list-unstyled collapse" data-bs-parents="#sidebar">
-                <li class="sidebar-item">
-                  <a href="#" class="sidebar-link">Nivel 1.1</a>
-                </li>
-                <li class="sidebar-item">
-                  <a href="#" class="sidebar-link">Nivel 1.2</a>
-                </li>
-                <li class="sidebar-item">
-                  <a href="#" class="sidebar-link">Nivel 1.3</a>
-                </li>
-
-              </ul>
-            </ul>
-
-          </li>
-
+        
         </ul>
       </div>
     </aside>
