--- a/core/templates/clientes/cliente_list.html
+++ b/core/templates/clientes/cliente_list.html
@@ -2,7 +2,9 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
-
+{% block title %}
+Buscar Cliente
+{% endblock %}
 
     {% block tlista %} Listado de Clientes {% endblock %}
 
