--- a/servicios/templates/servicios/servicio_list.html
+++ b/servicios/templates/servicios/servicio_list.html
@@ -4,6 +4,9 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block title %}
+Buscar Servicio
+{% endblock %}
 
 
     {% block tlista %} Listado de Servicios {% endblock %}
