--- a/servicios/templates/tiposServicios/tipoServicio_list.html
+++ b/servicios/templates/tiposServicios/tipoServicio_list.html
@@ -4,6 +4,10 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block title %}
+Buscar Tipo de Servicio
+{% endblock %}
+
 
 
     {% block tlista %} Listado de Tipos de servicio {% endblock %}
