--- a/core/templates/clientes/cliente_form.html
+++ b/core/templates/clientes/cliente_form.html
@@ -1,5 +1,9 @@
 {% extends "../baseform.html" %}
 
+{% block title %}
+Crear Cliente
+{% endblock %}
+
 <!--Titulo del formulario-->
 {% block tform %} Crear Cliente {% endblock %}
 
