--- a/core/templates/core/producto_form.html
+++ b/core/templates/core/producto_form.html
@@ -1,8 +1,9 @@
 {% extends "../baseform.html" %}
 
 {% block title %}
-    Productos
+Crear Producto
 {% endblock %}
+
 
 <!--Titulo del formulario-->
 {% block tform %} Crear Producto {% endblock %}
