--- a/core/templates/core/producto_list.html
+++ b/core/templates/core/producto_list.html
@@ -1,5 +1,10 @@
 {% extends "../baselist.html" %}
 
+{% block title %}
+Buscar Producto
+{% endblock %}
+
+
 {% block tmain %}
 <h4 class="mx-3">{{ titulo }}</h4>
 {% endblock %}
