--- a/core/templates/empleado/empleado_form.html
+++ b/core/templates/empleado/empleado_form.html
@@ -1,5 +1,9 @@
 {% extends "../baseform.html" %}
 
+{% block title %}
+Crear Empleado
+{% endblock %}
+
 <!--Titulo del formulario-->
 {% block tform %} Crear Empleado {% endblock %}
 
