--- a/core/templates/empleado/empleado_list.html
+++ b/core/templates/empleado/empleado_list.html
@@ -2,6 +2,10 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block title %}
+Buscar Empleados
+{% endblock %}
+
 {% block tmain %}
 <h4 class="mx-3">{{ titulo }}</h4>
 {% endblock %}
