--- a/core/templates/inmuebles/inmueble_form.html
+++ b/core/templates/inmuebles/inmueble_form.html
@@ -1,5 +1,9 @@
 {% extends "../baseform.html" %}
 
+{% block title %}
+Crear Inmueble
+{% endblock %}
+
 <!--Titulo del formulario-->
 {% block tform %} Crear Inmueble {% endblock %}
 
