--- a/servicios/templates/servicios/servicioForm.html
+++ b/servicios/templates/servicios/servicioForm.html
@@ -2,6 +2,11 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block title %}
+Crear Servicio
+{% endblock %}
+
+
 <!-- Titulo del formulario -->
 {% block tform %}
   Registrar Servicio
