--- a/servicios/templates/tiposServicios/tipoServicioForm.html
+++ b/servicios/templates/tiposServicios/tipoServicioForm.html
@@ -2,6 +2,11 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block title %}
+Crear Tipo de Servicio
+{% endblock %}
+
+
 <!-- Titulo del formulario -->
 {% block tform %}
   Registrar Tipo Servicio
