abm horarios funcionando

--- a/turnos/templates/horario/horario_form.html
+++ b/turnos/templates/horario/horario_form.html
@@ -4,7 +4,7 @@
 {% block tform %} Crear Turnos {% endblock %}
 
 <!--Url del formulario-->
-{% block url %} {% url 'crearHorario' %} {% endblock %}
+{% block url %} {% url 'turnos:crearHorario' %} {% endblock %}
 
 <!--Boton del formulario-->
 {% block btnform %} Guardar {% endblock %}
