--- a/turnos/templates/horario/horario_modal.html
+++ b/turnos/templates/horario/horario_modal.html
@@ -1,7 +1,8 @@
 {% extends "basemodal.html" %}
+{% load crispy_forms_tags %}
 
 <!--Titulo del modal-->
-{% block tmodal %} Edicion Turnos: {% endblock %}
+{% block tmodal %} Edicion Turno: {% endblock %}
 
 <!--Objeto del titulo del modal-->
 {% block tobjectmodal %} {{object}} {% endblock %}
