cambios servicios y turnos

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -177,7 +177,7 @@
 
         <a href="#" class="sidebar-link collapsed" data-bs-target="#gestionHorarios" data-bs-toggle="collapse"
           aria-expanded="false">
-          <i class="bi bi-box-seam"></i> Gestion Turnos
+          <i class="bi bi-alarm"></i> Gestion Turnos
         </a>
 
         <!--Turnos-->
