--- a/turnos/templates/horario/horario_list.html
+++ b/turnos/templates/horario/horario_list.html
@@ -2,6 +2,10 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+{% block title %}
+Buscar Turno
+{% endblock %}
+
     {% block tlista %} Listado de Turnos {% endblock %}
 
     {% block thextras %}
