--- a/turnos/templates/horario/horario_form.html
+++ b/turnos/templates/horario/horario_form.html
@@ -1,5 +1,9 @@
 {% extends "baseform.html" %}
 
+{% block title %}
+Crear Turno
+{% endblock %}
+
 <!--Titulo del formulario-->
 {% block tform %} Crear Turnos {% endblock %}
 
