--- a/core/templates/empleado/empleado_list.html
+++ b/core/templates/empleado/empleado_list.html
@@ -30,8 +30,8 @@ Buscar Empleados
                 <td>
                     <!--Si queremos abrir un moda, se utiliza abrir-->
 
-                    <a href="#" class="bi bi-pencil-square" onclick="abrir_modal('{% url "modificarEmpleado" e.legajo %}')"></a>
-                    <a href="#"><i class="bi bi-trash3 icon-danger" onclick="abrir_modal('{% url "eliminarEmpleado" e.legajo %}')"></i></a>
+                    <a href="#" class="bi bi-pencil-square" onclick="abrir_modal('{% url "modificarEmpleado" e.pk %}')"></a>
+                    <a href="#"><i class="bi bi-trash3 icon-danger" onclick="abrir_modal('{% url "eliminarEmpleado" e.pk %}')"></i></a>
                     
                 </td>
 
