resuelto problema de inmuebles de un cliente

--- a/core/templates/inmuebles/inmueble_form.html
+++ b/core/templates/inmuebles/inmueble_form.html
@@ -1,9 +1,9 @@
 {% extends "../baseform.html" %}
 
-{% block title %}
+<!-- {% block title %}
 Crear Inmueble
 {% endblock %}
-
+ -->
 <!--Titulo del formulario-->
 {% block tform %} Crear Inmueble {% endblock %}
 
