--- a/core/templates/inmuebles/inmueble_list.html
+++ b/core/templates/inmuebles/inmueble_list.html
@@ -2,9 +2,9 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
-{% block title %}
+<!--{% block title %}
 Buscar Inmuebles
-{% endblock %}
+{% endblock %}-->
 
 {% block tmain %}
 <h4 class="mx-3">{{ titulo }}</h4>
