no me deja hacer checkout si no commiteo xd

--- a/core/templates/inmuebles/inmueble_list.html
+++ b/core/templates/inmuebles/inmueble_list.html
@@ -48,14 +48,14 @@
     
 {% endblock %}
 
-{% block extrajs %}
-<!--Modal-->
-<!--script type="text/javascript">
+<!-- {% block extrajs %}
+<--Modal>
+<script type="text/javascript">
     var $ = jQuery.noConflict();
     function abrir_modal_edicion(url){
         $('#modificar').load(url, function(){
             $(this).modal('show');
         });
     }
-</script--> 
-{% endblock %}
+</script> 
+{% endblock %}-->
