commit para que me deje hacer checkout

--- a/core/templates/inmuebles/inmueble_modal.html
+++ b/core/templates/inmuebles/inmueble_modal.html
@@ -1,4 +1,6 @@
 {% extends "basemodal.html" %}
+{% comment %} {% load crispy_forms_tags %}
+{% load static %} {% endcomment %}
 
 <!--Titulo del modal-->
 {% block tmodal %} Edicion del Inmueble de: {% endblock %}
