--- a/core/templates/clientes/cliente_list.html
+++ b/core/templates/clientes/cliente_list.html
@@ -46,3 +46,14 @@ Buscar Cliente
     {% endfor %}
 {% endblock %}
 
+{% block extrajs %}
+<!--Modal-->
+<!--script type="text/javascript">
+    var $ = jQuery.noConflict();
+    function abrir_modal_edicion(url){
+        $('#modal').load(url, function(){
+            $(this).modal('show');
+        });
+    }
+</script--> 
+{% endblock %} 
